--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,17 @@ jobs:
     
     - name: Build with Gradle
       run: ./gradlew --no-daemon clean assembleDebug testDebug
+    
+    - name: Build web
+      working-directory: web
+      run: |
+        ver=$(pwd)
+        echo "当前路径 $ver"   
+        ver=$(find . -name *.apk)
+        echo "查找到的apk $ver"
+        #zip -r assets ./ui/**
+        #ver=$(ls -la)
+        #echo "当前zip路径 $ver
     - uses: actions/upload-artifact@v2
       with:
         name: upload-apk
