--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,11 +43,11 @@ jobs:
         ver=$(find . -name *.apk)
         echo "查找到的apk $ver"
         #zip -r assets ./ui/**
-        ver=$(ls -la)
-        echo "当前文件路径 $ver
+        #ver=$(ls -la)
+        #echo "当前文件路径 $ver
     - uses: actions/upload-artifact@v2
       with:
         name: upload-apk
         path: |
-          ${{github.workspace}}/app/build/outputs/apk/tencent/release/*.apk
-          ${{github.workspace}}/app/build/outputs/apk/xiaomi/release/*.apk
+          ${{github.workspace}}/app/build/outputs/apk/debug/*.apk
+      
